--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,77 @@
   <title>Sign-Up Form | Odin Project</title>
 </head>
 <body>
-  
+  <div class="logo-sidebar">
+    <div class="logo">
+      <img src="assets/images/odin-lined.png" alt="The Odin Project logo">
+      <span>ODIN</span>
+    </div>
+
+    <p class="attribution">
+      Photo by
+      <a href="https://unsplash.com/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Halie
+        West</a>
+      on
+      <a
+        href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+    </p>
+  </div>
+
+  <main>
+    <form action="">
+      <h1>
+        This is not a real online service! You know you need something like this in your life
+        to help you realize your deepest dreams.
+        <br>
+        Sign up <em>now</em> to get started.
+        <br><br>
+        You <em>know</em> you want to.
+      </h1>
+
+      <section id="fields">
+        <h2>Let's do this!</h2>
+
+        <div class="container">
+          <p>
+            <label for="first-name">FIRST NAME</label><br>
+            <input type="text" name="first-name" id="first-name" required>
+          </p>
+
+          <p>
+            <label for="last-name">LAST NAME</label><br>
+            <input type="text" name="last-name" id="last-name" required>
+          </p>
+
+          <p>
+            <label for="email">EMAIL</label><br>
+            <input type="email" name="email" id="email" required>
+          </p>
+
+          <p>
+            <label for="phone-number">PHONE NUMBER</label><br>
+            <input type="tel" name="phone-number" id="phone-number" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+              placeholder="xxx-xxx-xxxx">
+          </p>
+
+          <p>
+            <label for="password">PASSWORD</label><br>
+            <input type="password" name="password" id="password" required>
+          </p>
+
+          <p>
+            <label for="password-confirm">CONFIRM PASSWORD</label><br>
+            <input type="password" name="password-confirm" id="password-confirm" required>
+          </p>
+        </div>
+      </section>
+
+      <section id="submit">
+        <p>
+          <button type="submit">Create Account</button>
+        </p>
+        <span>Already have an account? <a href="#">Log in</a></span>
+      </section>
+    </form>
+  </main>
 </body>
 </html>
