--- a/src/index.html
+++ b/src/index.html
@@ -40,23 +40,23 @@
         <div class="container">
           <p>
             <label for="first-name">FIRST NAME</label><br>
-            <input type="text" name="first-name" id="first-name" required>
+            <input type="text" name="first-name" id="first-name" required autocomplete>
           </p>
 
           <p>
             <label for="last-name">LAST NAME</label><br>
-            <input type="text" name="last-name" id="last-name" required>
+            <input type="text" name="last-name" id="last-name" required autocomplete>
           </p>
 
           <p>
             <label for="email">EMAIL</label><br>
-            <input type="email" name="email" id="email" required>
+            <input type="email" name="email" id="email" required autocomplete>
           </p>
 
           <p>
             <label for="phone-number">PHONE NUMBER</label><br>
             <input type="tel" name="phone-number" id="phone-number" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-              placeholder="xxx-xxx-xxxx">
+              placeholder="xxx-xxx-xxxx" autocomplete>
           </p>
 
           <p>
