Change class name of element in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Sign-Up Form | Odin Project</title>
 </head>
 <body>
-  <div class="logo-sidebar">
+  <aside class="logo-sidebar">
     <div class="logo">
       <img src="assets/images/odin-lined.png" alt="The Odin Project logo">
       <span>ODIN</span>
@@ -21,7 +21,7 @@
       <a
         href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
     </p>
-  </div>
+  </aside>
 
   <main>
     <form action="">
