Assign a size value to input elements

--- a/src/index.html
+++ b/src/index.html
@@ -40,33 +40,33 @@
         <div class="container">
           <p>
             <label for="first-name">FIRST NAME</label><br>
-            <input type="text" name="first-name" id="first-name" required autocomplete>
+            <input type="text" name="first-name" id="first-name" size="25" required autocomplete>
           </p>
 
           <p>
             <label for="last-name">LAST NAME</label><br>
-            <input type="text" name="last-name" id="last-name" required autocomplete>
+            <input type="text" name="last-name" id="last-name" size="25" required autocomplete>
           </p>
 
           <p>
             <label for="email">EMAIL</label><br>
-            <input type="email" name="email" id="email" required autocomplete>
+            <input type="email" name="email" id="email" size="25" required autocomplete>
           </p>
 
           <p>
             <label for="phone-number">PHONE NUMBER</label><br>
-            <input type="tel" name="phone-number" id="phone-number" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+            <input type="tel" name="phone-number" id="phone-number" size="25" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
               placeholder="xxx-xxx-xxxx" autocomplete>
           </p>
 
           <p>
             <label for="password">PASSWORD</label><br>
-            <input type="password" name="password" id="password" required>
+            <input type="password" name="password" id="password" size="25" required>
           </p>
 
           <p>
             <label for="password-confirm">CONFIRM PASSWORD</label><br>
-            <input type="password" name="password-confirm" id="password-confirm" required>
+            <input type="password" name="password-confirm" id="password-confirm" size="25" required>
           </p>
         </div>
       </section>
