Style submit section

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
         <p>
           <button type="submit">Create Account</button>
         </p>
-        <span>Already have an account? <a href="#">Log in</a></span>
+        <span>Already have an account? <a class="login" href="#">Log in</a></span>
       </section>
     </form>
   </main>
