Move index.html outside the source folder
This will make the site actually work with GitHub Pages

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="src/style.css">
   <title>Sign-Up Form | The Odin Project</title>
 </head>
 <body>
   <aside class="logo-sidebar">
     <div class="logo">
-      <img src="assets/images/odin-lined.png" alt="The Odin Project logo">
+      <img src="src/assets/images/odin-lined.png" alt="The Odin Project logo">
       <span>ODIN</span>
     </div>
 
@@ -83,6 +83,6 @@
     </form>
   </main>
 
-  <script src="index.js"></script>
+  <script src="src/index.js"></script>
 </body>
 </html>
